# x402-dev-facilitator

./: .env.example  .gitignore  README.md  client.go  facilitator.go  go.mod  go.sum  main.go  pyproject.toml  vnet_delete.py  vnet_setup.py
.claude/: settings.local.json
.github/workflows/: build.yml  publish.yml
core/: client.go  common.go  extensions.go  facilitator.go  server.go
examples/: .env  client.go  client.py  client.ts  client_receipt.go  package-lock.json  package.json  server.go
examples/server/: .env  main.go  server.go  server.py
pyx402/: __init__.py  client.py  extensions.py  server.py
tests/: test_empty.py
