[project]
name = "pyx402"
version = "0.1.0"
description = "Python implementation of x402 payment client"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "x402 Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "web3>=6.15.1",
    "eth-account>=0.13.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.11.2",
]

[project.urls]
Homepage = "https://github.com/delta003/x402-dev-facilitator"
Repository = "https://github.com/delta003/x402-dev-facilitator.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
extend-exclude = [".venv", "proto", "protogen", "substrait"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I"]
# Do not auto-fix unused variables. This is really annoying when IntelliJ runs autofix while editing.
unfixable = ["F841"]
